# jabberwocky

./: README.md  jabberwocky.py  pyproject.toml
.github/workflows/: deploy-explorer.yml
docs/: CNAME  bundle.js  index.html
docs/explorer/: app.js  bundle.js  bundle.js.LICENSE.txt  deploy.sh  index.html  package.json  pnpm-lock.yaml  styles.css  webpack.config.js
docs/explorer/src/: App.jsx
docs/explorer/src/components/: About.jsx  Analysis.jsx  Header.jsx  Hero.jsx  Leaderboard.jsx  Loading.jsx  Methodology.jsx  ModelModal.jsx  OverlayChips.jsx  (+3 more)
docs/runs/run-50-20250905-2001/: all_samples.jsonl.bak  index.html  manifest.json  models_summary.json  models_summary.json.bak
docs/runs/run-50-high-20250906-0017/: all_samples.jsonl.bak  index.html  manifest.json  models_summary.json  models_summary.json.bak
docs/runs/run-mixed/: all_samples.jsonl  index.html  manifest.json  models_summary.json
docs/runs/run-mixed-20/: all_samples.jsonl  index.html  manifest.json  models_summary.json
docs/runs/run-mixed-50/: all_samples.jsonl  index.html  manifest.json  models_summary.json
docs/runs/run-mixed-50-high/: all_samples.jsonl  index.html  manifest.json  models_summary.json
docs/runs/run-mixed-50-medium/: all_samples.jsonl  index.html  manifest.json  models_summary.json
docs/runs/run-mixed-50-minimal/: all_samples.jsonl  index.html  manifest.json  models_summary.json  models_summary.json.bak
scripts/: actor_registry.py  backfill_judges.py  backfill_judges_direct.py  eval_groq_actor.py  eval_jabberwocky.py  restore_topics.py
tests/: test_jabberwocky.py
(+683 files in other folders)
